update after acceptance

--- a/sections/authorlist.tex
+++ b/sections/authorlist.tex
@@ -1,6 +1,6 @@
 % If you need two or more lines of authors, add an extra line using \newauthor
 
-\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$, Hui Kong$^{5}$, \newauthor Anna Porredon$^{6,7}$, Lado Samushia$^{1}$, Edmond Chaussidon$^{8}$, Alex Krolewski$^{9,10,11}$, \newauthor Arnaud de Mattia$^{8}$, Florian Beutler$^{6}$, Jessica Nicole Aguilar$^{4}$, Steven Ahlen$^{12}$, \newauthor Shadab Alam$^{13}$, Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{14}$, Jose Bermejo-Climent$^{15}$, \newauthor David Brooks$^{16}$, Todd Claybaugh$^{4}$, Shaun Cole$^{17}$, Kyle Dawson$^{18}$, \newauthor Axel de la Macorra$^{19}$, Peter Doel$^{16}$, Andreu Font-Ribera$^{5}$, Jaime E. Forero-Romero$^{20,21}$, \newauthor Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Klaus Honscheid$^{2, 21}$, \mr{Dragan Huterer$^{22}$}, \newauthor Theodore Kisner$^{4}$, Martin Landriau$^{4}$, Michael Levi$^{4}$, Marc Manera$^{5,24}$, Aaron Meisner$^{25}$, \newauthor Ramon Miquel$^{5, 26}$, Eva-Maria Mueller$^{27}$, Adam Myers$^{28}$, Jeffrey A. Newman$^{29}$, \newauthor Jundan Nie$^{30}$, Nathalie Palanque-Delabrouille$^{4,8}$, Will Percival$^{9,10,11}$, Claire Poppett$^{4,31}$, \newauthor Graziano Rossi$^{32}$, Eusebio Sanchez$^{33}$, Michael Schubnell$^{23}$, Gregory Tarlé$^{23}$, \newauthor Benjamin Alan Weaver$^{25}$, Christophe Yèche$^{8}$, Zhimin Zhou$^{30}$, Hu Zou$^{30}$
+\author[M. Rezaie et al.]{Mehdi Rezaie$^{1,2}$, Ashley J. Ross$^{2}$, Hee-Jong Seo$^{3,4}$, Hui Kong$^{5}$, \newauthor Anna Porredon$^{6,7}$, Lado Samushia$^{1}$, Edmond Chaussidon$^{8}$, Alex Krolewski$^{9,10,11}$, \newauthor Arnaud de Mattia$^{8}$, Florian Beutler$^{6}$, Jessica Nicole Aguilar$^{4}$, Steven Ahlen$^{12}$, \newauthor Shadab Alam$^{13}$, Santiago Avila$^{5}$, Benedict Bahr-Kalus$^{14}$, Jose Bermejo-Climent$^{15}$, \newauthor David Brooks$^{16}$, Todd Claybaugh$^{4}$, Shaun Cole$^{17}$, Kyle Dawson$^{18}$, \newauthor Axel de la Macorra$^{19}$, Peter Doel$^{16}$, Andreu Font-Ribera$^{5}$, Jaime E. Forero-Romero$^{20,21}$, \newauthor Satya Gontcho A Gontcho$^{4}$, Julien Guy$^{4}$, Klaus Honscheid$^{2, 21}$, Dragan Huterer$^{22}$, \newauthor Theodore Kisner$^{4}$, Martin Landriau$^{4}$, Michael Levi$^{4}$, Marc Manera$^{5,24}$, Aaron Meisner$^{25}$, \newauthor Ramon Miquel$^{5, 26}$, Eva-Maria Mueller$^{27}$, Adam Myers$^{28}$, Jeffrey A. Newman$^{29}$, \newauthor Jundan Nie$^{30}$, Nathalie Palanque-Delabrouille$^{4,8}$, Will Percival$^{9,10,11}$, Claire Poppett$^{4,31}$, \newauthor Graziano Rossi$^{32}$, Eusebio Sanchez$^{33}$, Michael Schubnell$^{23}$, Gregory Tarlé$^{23}$, \newauthor Benjamin Alan Weaver$^{25}$, Christophe Yèche$^{8}$, Zhimin Zhou$^{30}$, Hu Zou$^{30}$
 \\~\\
 % List of institutions
 $^{1}$Department of Physics, Kansas State University, 116 Cardwell Hall, Manhattan, KS 66506, USA\\ 
