--- a/style.sty
+++ b/style.sty
@@ -17,8 +17,8 @@
 \usepackage{hyperref}
 \hypersetup{
     colorlinks=true,
-    linkcolor=black, % blue
-    citecolor=black, % blue
+    linkcolor=blue,
+    citecolor=blue,
 }
 
 \graphicspath{{./}{figures/}}
