--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,5 +1,5 @@
 \section{Results}\label{sec:results}
-We now present our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. \mr{As presented in Section \ref{sec:systests}, these tests show that none of the linear methods yields reasonable statistics, and only the nonlinear approach with the nine maps can pass the criteria, which is why we select the nonlinear nine maps as our fiducial method for cleaning systematics.} We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$.
+We now present our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. As presented in Section \ref{sec:systests}, these tests show that none of the linear methods yields reasonable statistics, and only the nonlinear approach with the nine maps can pass the criteria, which is why we select the nonlinear nine maps as our fiducial method for cleaning systematics. We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$.
 
 \subsection{DESI imaging LRG sample}
 \begin{figure}
@@ -9,7 +9,7 @@ We now present our $\fnl$ constraints obtained from the power spectrum of the DE
     \label{fig:cl_dr9}
 \end{figure}
 
-We find that the excess clustering signal in the power spectrum of the DESI LRG targets is mitigated after correcting for the imaging systematic effects. Figure \ref{fig:cl_dr9} shows the measured power spectrum of the DESI LRG targets before and after applying imaging weights and the best-fitting theory curves. The solid grey line and the grey shade represent respectively the mean power spectrum and 1$\sigma$ error, estimated from the $\fnl=0$ lognormal simulations. The differences between various cleaning methods are significant on large scales ($\ell < 20$), but the small scale clustering measurements are consistent. \mr{We associate the differences to the over-correction caused by including more maps for the treatment of systematics, which we base upon the validation of the methods on the mocks, or the suppression of excess power from systematics.} \mout{By comparing \textit{linear two maps} to \textit{linear three maps}, we find that the measured clustering power on modes with $6\leq \ell < 10$ are noticeably different between the two methods. We associate the differences to the additional map for psfsize in the r-band, which is included in \textit{linear three maps}. On other scales, the differences between \textit{linear three maps} and \textit{linear nine maps} are negligible, supporting the idea that our feature selection procedure has been effective in identifying the primary maps which cause the large-scale excess clustering signal. Comparing \textit{non-linear three maps} to \textit{linear three maps}, we find that the measured spectra on $4 \leq \ell < 6$ are very different, probably indicating some non-linear spurious fluctuations with large scale characteristics due to extinction.} \mr{Comparing \textit{non-linear three maps} to \textit{non-linear four maps}, we find that} adding stellar density in the non-linear approach (\textit{non-linear four maps}) further reduces the excess power relative to the mock power spectrum, in particular on modes between $2\leq \ell < 4$. However, when calibrated on the lognormal simulations, we find that the over-subtraction due to stellar density is reversed after accounting for over-correction. \mr{Our fiducial approach, \textit{non-linear nine maps}, yields the lowest (and almost constant) power on large scales among all methods.}
+We find that the excess clustering signal in the power spectrum of the DESI LRG targets is mitigated after correcting for the imaging systematic effects. Figure \ref{fig:cl_dr9} shows the measured power spectrum of the DESI LRG targets before and after applying imaging weights and the best-fitting theory curves. The solid grey line and the grey shade represent respectively the mean power spectrum and 1$\sigma$ error, estimated from the $\fnl=0$ lognormal simulations. The differences between various cleaning methods are significant on large scales ($\ell < 20$), but the small scale clustering measurements are consistent. We associate the differences to the over-correction caused by including more maps for the treatment of systematics, which we base upon the validation of the methods on the mocks, or the suppression of excess power from systematics. Comparing \textit{non-linear three maps} to \textit{non-linear four maps}, we find that adding stellar density in the non-linear approach (\textit{non-linear four maps}) further reduces the excess power relative to the mock power spectrum, in particular on modes between $2\leq \ell < 4$. However, when calibrated on the lognormal simulations, we find that the over-subtraction due to stellar density is reversed after accounting for over-correction. Our fiducial approach, \textit{non-linear nine maps}, yields the lowest (and almost constant) power on large scales among all methods.
 
 
 \subsubsection{Calibrated constraints}
@@ -25,11 +25,11 @@ We find that the excess clustering signal in the power spectrum of the DESI LRG 
 \raggedleft
 \includegraphics[width=0.45\textwidth]{figures/fnl_p.pdf}
 \includegraphics[width=0.437\textwidth]{figures/fnl_magbias.pdf}
-\caption{\mr{The best-fitting estimates of $\fnl$ and their corresponding $68\%$ ($95\%$) errors from the DESI LRG targets using the non-linear nine maps approach given various values of $p$ or $s$. The star symbol represents the fiducial analysis with $p=1$ and $s=0.945$.}}\label{fig:fnl_magbias}
+\caption{The best-fitting estimates of $\fnl$ and their corresponding $68\%$ ($95\%$) errors from the DESI LRG targets using the non-linear nine maps approach given various values of $p$ or $s$. The star symbol represents the fiducial analysis with $p=1$ and $s=0.945$.}\label{fig:fnl_magbias}
 \end{figure}
 
 \begin{table*}
-    \caption{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for imaging systematic effects. The lowest mode is $\ell_{\rm min}=2$\mr{, $p=1$, and $s=0.945$.}}
+    \caption{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for imaging systematic effects. The lowest mode is $\ell_{\rm min}=2$, $p=1$, and $s=0.945$.}
     \label{tab:dr9methodcalib}
    \centerline{%     
     \begin{tabular}{llllllll}
@@ -48,12 +48,12 @@ DESI & Nonlinear Nine Maps              & $    34$& $    24$& $   -10<\fnl<    5
 }
 \end{table*}
 
-All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain \mr{$33 (21) < \fnl < 61(76)$} at $68\%(95\%)$ confidence with \mr{$\chi^{2}=33.9$} for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain \mr{$33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using \textit{non-linear four maps} which includes the additional stellar density map}. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is \mr{erroneously} greater than zero, $P(\fnl >0)=99.9$ per cent\mr{, which we attribute to systematics (see Appendix \ref{sec:systests})}. We also apply a more aggressive systematics treatment that includes regression using the non-linear approach against the set of nine imaging maps we identified, \textit{non-linear nine maps}, and find that \mr{zero $\fnl$ is recovered. Specifically,} our maximum likelihood value changes \mout{only slightly} to \mr{$\fnl \sim 34$ with $\chi^{2}=39.1$}, \mout{but} \mr{and the uncertainty on $\fnl$ increases by more than a factor of two, resulting in $-10 (-39) < \fnl < 58 (84)$ at $68\% (95\%)$ confidence. This increase is attributed to the aggressive treatment, which removes large-scale clustering information and diminishes the constraining power of the dataset.}
+All $\fnl$ constraints presented here are calibrated for the effect of over-correction using the lognormal simulations. Table \ref{tab:dr9methodcalib} describes the best-fitting and marginalized mean estimates of $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after cleaning with the non-linear approach given various combinations for the imaging systematic maps. Figure \ref{fig:mcmc_dr9} shows the marginalized probability distribution for $\fnl$ in the top panel, and the $68\%$ and $95\%$ probability contours for the linear bias parameter and $\fnl$ in the bottom panel, from our sample before and after applying various corrections for imaging systematics. Overall, we find the maximum likelihood estimates to be consistent among the various cleaning methods. We obtain $33 (21) < \fnl < 61(76)$ at $68\%(95\%)$ confidence with $\chi^{2}=33.9$ for \textit{non-linear three maps} with $34$ degrees of freedom. Accounted for over-correction, we obtain $33(19) < \fnl < 62(78)$ with $\chi^{2}=34.4$ using \textit{non-linear four maps} which includes the additional stellar density map. With or without stellar density, the confidence intervals are consistent with each other and significantly off from zero PNG; specifically, the probability that $\fnl$ is erroneously greater than zero, $P(\fnl >0)=99.9$ per cent, which we attribute to systematics (see Appendix \ref{sec:systests}). We also apply a more aggressive systematics treatment that includes regression using the non-linear approach against the set of nine imaging maps we identified, \textit{non-linear nine maps}, and find that zero $\fnl$ is recovered. Specifically, our maximum likelihood value changes to $\fnl \sim 34$ with $\chi^{2}=39.1$, and the uncertainty on $\fnl$ increases by more than a factor of two, resulting in $-10 (-39) < \fnl < 58 (84)$ at $68\% (95\%)$ confidence. This increase is attributed to the aggressive treatment, which removes large-scale clustering information and diminishes the constraining power of the dataset.
 
-\mr{Additionally, we explore the sensitivity of the $\fnl$ posterior using the non-linear nine maps method while varying the values of $p$ in the range of $0.5$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Figure \ref{fig:fnl_magbias} illustrates our findings, and Table \ref{tab:dr9ps} provides a summary. Regardless of the specific values chosen for $p$ and $s$, we reliably recover $\fnl=0$ within the $95\%$ confidence interval. The top panel also implies that marginalizing over $p$ can induce projection effects and lead to biased $\fnl$ constraints.} For comparison, we obtain \mr{$102(86) < \fnl < 140(161)$} at $68\% (95\%)$ confidence with \mr{$\chi^{2}=45.1$} for the \textit{no weight} case.
+Additionally, we explore the sensitivity of the $\fnl$ posterior using the non-linear nine maps method while varying the values of $p$ in the range of $0.5$ to $1.6$ and $s$ in the range of $0.75$ to $1.25$. Figure \ref{fig:fnl_magbias} illustrates our findings, and Table \ref{tab:dr9ps} provides a summary. Regardless of the specific values chosen for $p$ and $s$, we reliably recover $\fnl=0$ within the $95\%$ confidence interval. The top panel also implies that marginalizing over $p$ can induce projection effects and lead to biased $\fnl$ constraints. For comparison, we obtain $102(86) < \fnl < 140(161)$ at $68\% (95\%)$ confidence with $\chi^{2}=45.1$ for the \textit{no weight} case.
 
 \begin{table*}
-    \caption{\mr{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from the DESI LRG targets cleaned with the non-linear nine maps approach, given various values of $p$ and $s$. The fiducial analysis uses $p=1$ and $s=0.945$ (DESI footprint).}}
+    \caption{The calibrated best-fitting, marginalized mean, and marginalized $68\%$ ($95\%$) confidence estimates for $\fnl$ from the DESI LRG targets cleaned with the non-linear nine maps approach, given various values of $p$ and $s$. The fiducial analysis uses $p=1$ and $s=0.945$ (DESI footprint).}
     \label{tab:dr9ps}
    \centerline{%     
     \begin{tabular}{llllll}
@@ -91,10 +91,10 @@ $s=$ 0.75                                    & $    42$& $    31$& $    -1<\fnl<
 \end{table*}
 
 \subsubsection{Uncalibrated constraints: robustness tests}
-Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. \mout{As expected, non-linear nine maps yields the smallest maximum likelihood estimate of $\fnl=-13$}. The non-linear three maps approach returns a best-fitting estimate of \mr{$\fnl=27$} with the $68\%(95\%)$ confidence of \mr{$17(6)<\fnl <40(53)$} and \mr{$\chi^{2}=33.9$}. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of \mr{$\fnl=14$} with the error of \mr{$5(-6)<\fnl<26(38)$}. The non-linear nine maps gives an \mr{asymmetric} posterior with the marginalized mean \mr{$\fnl=-17$}, \mr{and the smallest best-fitting} estimate \mr{of $\fnl=-13$} with the error of \mr{$-31(-44)<\fnl<-3(9)$}. \mr{The disparities in the best-fitting estimates can be linked to over-correction, mirroring the effects observed in the mocks (refer to Figure \ref{fig:contmcmc}). Consequently, caution is advised when considering the uncalibrated values. Without adjusting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ within $95\%$ and $68\%$ confidence, respectively. However, the non-linear method with three maps exhibits tension with $\fnl=0$ at a confidence level of $99.5$ percent.}
+Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal aggressively and return biased $\fnl$ constraints. The non-linear three maps approach returns a best-fitting estimate of $\fnl=27$ with the $68\%(95\%)$ confidence of $17(6)<\fnl <40(53)$ and $\chi^{2}=33.9$. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of $\fnl=14$ with the error of $5(-6)<\fnl<26(38)$. The non-linear nine maps gives an asymmetric posterior with the marginalized mean $\fnl=-17$, and the smallest best-fitting estimate of $\fnl=-13$ with the error of $-31(-44)<\fnl<-3(9)$. The disparities in the best-fitting estimates can be linked to over-correction, mirroring the effects observed in the mocks (refer to Figure \ref{fig:contmcmc}). Consequently, caution is advised when considering the uncalibrated values. Without adjusting for over-correction, non-linear four maps and non-linear nine maps recover zero $\fnl$ within $95\%$ and $68\%$ confidence, respectively. However, the non-linear method with three maps exhibits tension with $\fnl=0$ at a confidence level of $99.5$ percent.
 
 \begin{table*}
-    \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters) \mr{for all cases except the case that combines the data at the likelihood level, `BASS+MzLS+DECaLS', in which the dof is 104 ($3\times37-7$)}. The lowest mode is $\ell=2$ and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). \mr{We fix $p=1$ for all cases and $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}}
+    \caption{The uncalibrated best-fitting and marginalized mean estimates for $\fnl$ from fitting the power spectrum of the DESI LRG targets before and after correcting for systematics. The estimates are not calibrated for over-correction, and thus are subject to mitigation systematics. The number of degrees of freedom is 34 (37 data points - 3 parameters) for all cases except the case that combines the data at the likelihood level, `BASS+MzLS+DECaLS', in which the dof is 104 ($3\times37-7$). The lowest mode is $\ell=2$ and the covariance matrix is from the $\fnl=0$ clean mocks (no mitigation) except for the case with '+ Cov' in which the covariance matrix is from the $\fnl=76.9$ clean mocks (no mitigation). We fix $p=1$ for all cases and $s=0.945$ for DESI, $0.943$ for DECaLS North (and South), and $0.951$ for BASS+MzLS.}
     \label{tab:dr9method}
    %\centerline{%     
     \begin{tabular}{lllllll}
@@ -160,7 +160,7 @@ DECaLS South & Nonlinear Eleven Maps        & $   -38$& $   -35$& $   -52<\fnl< 
     \centering
     \includegraphics[width=0.9\textwidth]{figures/cldr9_lowell.pdf}
     \includegraphics[width=0.9\textwidth]{figures/fnl_elmin.pdf}  
-    \caption{Top: The measured power spectrum of the DESI LRG targets before (solid curves) and after \textit{non-linear \mr{nine} maps} (scatter points) for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. The solid curve and grey shade respectively represent the mean power spectrum and $68\%$ error from the $\fnl=0$ mocks with the same angular mask for each region. Bottom: The uncalibrated $\fnl$ constraints vs the lowest $\ell$ mode used for fitting $\fnl$. The points represent the best fitting estimates of $\fnl$ and error bars represent $95$\% confidence. The scaling of $\fnl$ is not calibrated to account for over-correction caused by mitigation.}\label{fig:mcmc_dr9elmin}
+    \caption{Top: The measured power spectrum of the DESI LRG targets before (solid curves) and after \textit{non-linear nine maps} (scatter points) for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. The solid curve and grey shade respectively represent the mean power spectrum and $68\%$ error from the $\fnl=0$ mocks with the same angular mask for each region. Bottom: The uncalibrated $\fnl$ constraints vs the lowest $\ell$ mode used for fitting $\fnl$. The points represent the best fitting estimates of $\fnl$ and error bars represent $95$\% confidence. The scaling of $\fnl$ is not calibrated to account for over-correction caused by mitigation.}\label{fig:mcmc_dr9elmin}
 \end{figure*}
 
 
@@ -168,21 +168,21 @@ Now we proceed to perform some robustness tests and assess how sensitive the $\f
 
 \begin{itemize}[itemindent=*]
 
-\item \textbf{Linear methods}: \mr{Even though the linear methods show remaining systematics (e.g., against depth in z as shown in Figure \ref{fig:nbarmock}), we obtain identical constraints from \textit{linear four maps} and \textit{linear nine maps}, respectively, $20(9)<\fnl<45(58)$ and $19(9)<\fnl<43(57)$ at $68\%(95\%)$ confidence. For the linear treatment methods, the probability of $\fnl$ being greater than zero is erroneously $99.9$ per cent. Any attempt to account for the over-correction would elevate this probability even further. The overestimation of $\fnl$ can be attributed to an increase in systematic contamination.}
+\item \textbf{Linear methods}: Even though the linear methods show remaining systematics (e.g., against depth in z as shown in Figure \ref{fig:nbarmock}), we obtain identical constraints from \textit{linear four maps} and \textit{linear nine maps}, respectively, $20(9)<\fnl<45(58)$ and $19(9)<\fnl<43(57)$ at $68\%(95\%)$ confidence. For the linear treatment methods, the probability of $\fnl$ being greater than zero is erroneously $99.9$ per cent. Any attempt to account for the over-correction would elevate this probability even further. The overestimation of $\fnl$ can be attributed to an increase in systematic contamination.
 %
-\item \textbf{Imaging regions}: We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{non-linear \mr{nine} maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. The bias in DECaLS North is lower than the ones from DECaLS South and BASS+MzLS, which might indicate some remaining systematic effects that could not be mitigated with the available imaging systematic maps. This is because given the negative correlation between $b$ and $\fnl$, a larger value of $\fnl$ due to excess clustering power needs to be compensated by a smaller value of $b$. Overall, we find that the constraints from analyzing each imaging survey separately are consistent with each other and DESI within $68\%$ confidence. \mr{We also consider combining the data at the likelihood level (`BASS+MzLS+DECaLS'). In this case the total number of data points is $111$ ($3\times 37$). We allow the bias and shotnoise paramters to vary independently for each sub-region but use a single and common $\fnl$ value, which brings the total number of free parameters to $7$ and the number of degrees of freedom to $104$. We obtain a best-fitting estimate of $\fnl=-31$ with $\chi^{2}=114.2$ and $68\%$ ($95\%$) confidence interval of $-41(-53) < \fnl < 9(5)$. Compared with our fiducial analysis which combines the data at the map level, we observe around $13\%$ loss in constraining power.}\mout{Ignoring the over-correction effect, we find that the results from the DECaLS North region to be the only one that finds PNG nonzero at greater than 95\%, which motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North.}
+\item \textbf{Imaging regions}: We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{non-linear nine maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. The bias in DECaLS North is lower than the ones from DECaLS South and BASS+MzLS, which might indicate some remaining systematic effects that could not be mitigated with the available imaging systematic maps. This is because given the negative correlation between $b$ and $\fnl$, a larger value of $\fnl$ due to excess clustering power needs to be compensated by a smaller value of $b$. Overall, we find that the constraints from analyzing each imaging survey separately are consistent with each other and DESI within $68\%$ confidence. We also consider combining the data at the likelihood level (`BASS+MzLS+DECaLS'). In this case the total number of data points is $111$ ($3\times 37$). We allow the bias and shotnoise paramters to vary independently for each sub-region but use a single and common $\fnl$ value, which brings the total number of free parameters to $7$ and the number of degrees of freedom to $104$. We obtain a best-fitting estimate of $\fnl=-31$ with $\chi^{2}=114.2$ and $68\%$ ($95\%$) confidence interval of $-41(-53) < \fnl < 9(5)$. Compared with our fiducial analysis which combines the data at the map level, we observe around $13\%$ loss in constraining power.
 
-\item \textbf{Stellar density template (\textit{nStar})}: When not accounting for over-correction, adding the stellar density map appears to result in significant changes in the $\fnl$ constraints, e.g., compare non-linear three maps with non-linear four maps in Table \ref{tab:dr9method}. But these changes disappear when we account for the mitigation bias and we find \mout{all}\mr{both} methods recover the same maximum likelihood estimate for \mr{$\fnl \sim 46$} within $69\%$ confidence, see Table \ref{tab:dr9methodcalib}, which implies that these changes can be associated with the over-correction issue from the chance correlations between the stellar density map and large-scale structure.
+\item \textbf{Stellar density template (\textit{nStar})}: When not accounting for over-correction, adding the stellar density map appears to result in significant changes in the $\fnl$ constraints, e.g., compare non-linear three maps with non-linear four maps in Table \ref{tab:dr9method}. But these changes disappear when we account for the mitigation bias and we find both methods recover the same maximum likelihood estimate for $\fnl \sim 46$ within $69\%$ confidence, see Table \ref{tab:dr9methodcalib}, which implies that these changes can be associated with the over-correction issue from the chance correlations between the stellar density map and large-scale structure.
 
 \item \textbf{Pixel completeness (\textit{comp. cut})}: We discard pixels with fractional completeness less than half to assess the effect of partially complete pixels on $\fnl$. This pixel completeness cut removes $0.6\%$ of the survey area, and no significant changes in the $\fnl$ constraints are observed.
 
-\item \textbf{Imaging quality (\textit{imag. cut})}: Pixels with poor photometry are removed from our sample by applying the following cuts on imaging; $E[B-V]<0.1$, $nStar < 3000$, ${\rm depth}_{g} > 23.2$, ${\rm depth}_{r} > 22.6$, ${\rm depth}_{z} > 22.5$, ${\rm psfsize}_{g}<2.5$, ${\rm psfsize}_{r}<2.5$, and ${\rm psfsize}_{z}<2$. Although these cuts remove $8\%$ of the survey mask, there is a negligible impact on the best-fitting estimates of $\fnl$ from fitting the DESI power spectrum. However, when each region is fit individually, the BASS+MzLS constraint \mr{is more stable than those from DECaLS North and DECaLS South.} \mout{shift toward higher values of $\fnl$ by approximately $\Delta \fnl \sim 10$, whereas the constraints from the DECaLS North and DECaLS South do not change significantly.} 
+\item \textbf{Imaging quality (\textit{imag. cut})}: Pixels with poor photometry are removed from our sample by applying the following cuts on imaging; $E[B-V]<0.1$, $nStar < 3000$, ${\rm depth}_{g} > 23.2$, ${\rm depth}_{r} > 22.6$, ${\rm depth}_{z} > 22.5$, ${\rm psfsize}_{g}<2.5$, ${\rm psfsize}_{r}<2.5$, and ${\rm psfsize}_{z}<2$. Although these cuts remove $8\%$ of the survey mask, there is a negligible impact on the best-fitting estimates of $\fnl$ from fitting the DESI power spectrum. However, when each region is fit individually, the BASS+MzLS constraint is more stable than those from DECaLS North and DECaLS South. 
 
-\item \textbf{Covariance matrix (\textit{cov})}: We fit the power spectrum of our sample cleaned with \textit{non-linear nine maps}, but use the covariance matrix constructed from the $\fnl=76.9$ mocks. With the alternative covariance, a \mr{$7\%$} increase in the 68\% error on $\fnl$, $\sigma(\fnl)$, is observed. We also find that the best-fitting and marginalized mean estimates of $\fnl$ increase slightly by \mr{$\Delta \fnl = 2$}. Overall, we find that the differences are not significant in comparison to the statistical precision.
+\item \textbf{Covariance matrix (\textit{cov})}: We fit the power spectrum of our sample cleaned with \textit{non-linear nine maps}, but use the covariance matrix constructed from the $\fnl=76.9$ mocks. With the alternative covariance, a $7\%$ increase in the 68\% error on $\fnl$, $\sigma(\fnl)$, is observed. We also find that the best-fitting and marginalized mean estimates of $\fnl$ increase slightly by $\Delta \fnl = 2$. Overall, we find that the differences are not significant in comparison to the statistical precision.
 
-\item \textbf{External maps (\textit{CALIBZ+HI})}: The neural network \mr{eleven} maps correction includes the additional maps for the neutral column density (HI) and the z-band calibration error (CALIBZ). With this correction, the best-fitting $\fnl$ increases from \mr{$-4$ to $-2$} for DECaLS North and from \mr{$-43$ to $-38$} for DECaLS South, which might suggest that adding HI and CALIBZ increases the input noise, and thus negatively impacts the performance of the neural network model. This test is not performed on BASS+MzLS due to a lack of coverage from the CALIBZ map. 
+\item \textbf{External maps (\textit{CALIBZ+HI})}: The neural network eleven maps correction includes the additional maps for the neutral column density (HI) and the z-band calibration error (CALIBZ). With this correction, the best-fitting $\fnl$ increases from $-4$ to $-2$ for DECaLS North and from $-43$ to $-38$ for DECaLS South, which might suggest that adding HI and CALIBZ increases the input noise, and thus negatively impacts the performance of the neural network model. This test is not performed on BASS+MzLS due to a lack of coverage from the CALIBZ map. 
 
-\item \textbf{Declination mask (\textit{no DEC cut})}: The fiducial mask removes the disconnected islands in DECaLS North and regions with DEC $<-30$ in DECaLS South, where there is a high likelihood of calibration issues as different standard stars are used for photometric calibrations. We analyze our sample without these cuts, and find that the best-fitting and marginalized $\fnl$ mean estimates from DECaLS South shift significantly to higher values of $\fnl$ by \mr{$\Delta \fnl \sim 41$}, which supports the case that there are remaining photometric systematics in the DECaLS South region below DEC $=-30$. On the other hand, the constraints from DECaLS North do not change significantly, indicating the islands do not induce significant contaminations.
+\item \textbf{Declination mask (\textit{no DEC cut})}: The fiducial mask removes the disconnected islands in DECaLS North and regions with DEC $<-30$ in DECaLS South, where there is a high likelihood of calibration issues as different standard stars are used for photometric calibrations. We analyze our sample without these cuts, and find that the best-fitting and marginalized $\fnl$ mean estimates from DECaLS South shift significantly to higher values of $\fnl$ by $\Delta \fnl \sim 41$, which supports the case that there are remaining photometric systematics in the DECaLS South region below DEC $=-30$. On the other hand, the constraints from DECaLS North do not change significantly, indicating the islands do not induce significant contaminations.
 
-\item \textbf{Scale dependence (\textit{varying $\ell_{\rm min}$})}: We raise the value of the lowest harmonic mode $\ell_{\rm min}$ used for the likelihood evaluation during MCMC. This is equivalent to utilizing smaller spatial scales in the measurements of the power spectrum. By doing so, we anticipate a reduction in the impact of imaging systematics on $\fnl$ inference as lower $\ell$ modes are more likely to be contaminated. Figure \ref{fig:mcmc_dr9elmin} illustrates the power spectra before and after the correction with \textit{non-linear \mr{nine} maps} in the top panel. The bottom panel shows the best fitting estimate and $95\%$ error on $\fnl$ with \textit{non-linear nine maps} for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. We discover that a slight upward shift in the best fitting estimates of $\fnl$ on scales ranging from $10$ to $20$ for DECaLS North and BASS+MzLS when we utilized a higher $\ell_{\rm min}$. This outcome might imply that the imaging systematic maps do not contain enough information to help the cleaning method null out the contaminating signal in the NGC. We also find that the bump is resilient against an alternative correction, in which we apply the neural networks trained on the DECaLS South to the DECaLS North region (see \ref{ssec:ndecalsbump}). Overall, this result is contrary to what one might predict if a significant systematic-induced spike existed at the very low $\ell$\mr{, or if we had an extremely large-scale systematic leakage from the $\ell=1$ mode}. As a result, it suggests that the underlying issue is more subtle than originally anticipated.
+\item \textbf{Scale dependence (\textit{varying $\ell_{\rm min}$})}: We raise the value of the lowest harmonic mode $\ell_{\rm min}$ used for the likelihood evaluation during MCMC. This is equivalent to utilizing smaller spatial scales in the measurements of the power spectrum. By doing so, we anticipate a reduction in the impact of imaging systematics on $\fnl$ inference as lower $\ell$ modes are more likely to be contaminated. Figure \ref{fig:mcmc_dr9elmin} illustrates the power spectra before and after the correction with \textit{non-linear nine maps} in the top panel. The bottom panel shows the best fitting estimate and $95\%$ error on $\fnl$ with \textit{non-linear nine maps} for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. We discover that a slight upward shift in the best fitting estimates of $\fnl$ on scales ranging from $10$ to $20$ for DECaLS North and BASS+MzLS when we utilized a higher $\ell_{\rm min}$. This outcome might imply that the imaging systematic maps do not contain enough information to help the cleaning method null out the contaminating signal in the NGC. We also find that the bump is resilient against an alternative correction, in which we apply the neural networks trained on the DECaLS South to the DECaLS North region (see \ref{ssec:ndecalsbump}). Overall, this result is contrary to what one might predict if a significant systematic-induced spike existed at the very low $\ell$, or if we had an extremely large-scale systematic leakage from the $\ell=1$ mode. As a result, it suggests that the underlying issue is more subtle than originally anticipated.
 \end{itemize}
